<resources>
    <string name="app_name">Car Rent System</string>
    <string name="get_started">Get Started</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_now">Register Now</string>
    <string name="login_as_agency">Login As Agency</string>
    <string name="register_as_agency">Register As Agency</string>
    <string name="agency_dashboard">Agency Dashboard</string>
    <string name="add_new_car">Add New Car</string>
    <string name="car_list">Car List</string>
    <string name="manage_orders">Manage Orders</string>
    <string name="plat_no">Plat No.</string>
    <string name="desc">Description</string>
    <string name="price">Price / Day</string>
    <string name="uplaod_car_images">Uplaod Car Images</string>
    <string name="submit">Submit</string>
    <string name="search_cars">Search cars</string>
    <string name="to_date">To Date</string>
    <string name="from_date">From Date</string>
    <string name="search_for_a_car">Search for a car</string>
    <string name="search_results">Search Results</string>
    <string name="color">Color</string>
    <string name="rent_order">Rent Order</string>
    <string name="full_name">Full Name</string>
    <string name="civil_id">Civil ID</string>
    <string name="upload_driving_license">Upload driving license</string>
    <string name="email_password_required_2">Email and password are required</string>
    <string name="email_address_format_err_msg">The email address is badly formatted</string>
    <string name="already_in_use_err_msg">The email address is already in use by another account</string>
    <string name="sign_up_general_error_msg">Can\'t create account, please try again later</string>
    <string name="user_not_found_err_msg">There is no user corresponding to this email address</string>
    <string name="sign_in_general_error_msg">Wrong ُemail or password. Please try again</string>
    <string name="password_invalid_err_msg">The given password is invalid [ Password should be at least 6 characters ]</string>
    <string name="email_password_required_message">E mail and password must be inserted</string>
    <string name="all_fields_required_message">All fields must be inserted</string>
    <string name="agency_rules">1- Age Restrictions: Renters must be at least 21 years old and have a valid driver\'s license.\n
        2- Insurance: Renters must have liability insurance coverage or purchase the agency\'s insurance coverage.\n
        3- Driving Restrictions: Renters must obey all traffic laws and are not allowed to use the vehicle for illegal activities.\n
        4- Maintenance and Cleaning: Renters must return the vehicle in the same condition as it was received, including refueling the tank, and cleaning the interior and exterior.\n
        5- Damage and Loss: Renters are responsible for any damage or loss to the vehicle during the rental period.\n
        6- Fuel Policy: Renters must return the vehicle with the same fuel level as it was received, or a refueling fee will be charged.\n
        7- Late Returns: Renters must return the vehicle on the agreed upon return date and time, or a late fee will be charged.\n
        8- Mileage Limits: Renters may be subject to a per-mile charge if the mileage exceeds the agreed upon limit.\n
        9- Reservation Policy: Renters must provide a valid credit card to secure a reservation and may be required to pay a deposit or prepayment.</string>
    <string name="agree">I Agree</string>
    <string name="dont_agree">Don\'t Agree</string>
    <string name="agency_rules_must_be_agreed">You must agree to Agency Rules</string>
    <string name="details">Details</string>
    <string name="order_details">Order Details</string>
    <string name="phone">Phone</string>
    <string name="car_details">Car details:</string>
    <string name="driving_license">Driving license:</string>
    <string name="confirm">Confirm</string>
    <string name="reject">Reject</string>
    <string name="search_orders_by_phone_number">Search orders by phone number</string>
    <string name="i_agree">I Agree</string>
    <string name="sign_out">Sign Out</string>
    <string name="plate_number">Plate Number</string>
    <string name="check_violations">Check Violations</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="violation_list">Violation List</string>
    <string name="police_traffic_authority">Police Traffic Authority</string>
    <string name="fees">Fees</string>
    <string name="agency_notes_will_be_shown_here">Agency Notes will be shown here</string>

</resources>