<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent_gray">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".presentation.client.RentCarOrderActivity">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:background="@null"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/colorAccent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_details"
            android:textColor="@color/colorAccent"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="@id/back_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/back_button" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintBottom_toTopOf="@id/buttons_layout">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/edit_text_background"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/icon_6"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/add_car_icon" />

                <EditText
                    android:id="@+id/full_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:layout_marginEnd="16dp"
                    android:spinnerMode="dropdown"
                    android:layout_toEndOf="@id/icon_6"
                    android:background="@null"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:hint="@string/full_name"
                    android:enabled="false"
                    android:inputType="textPersonName"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/edit_text_background"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/icon_7"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/add_car_icon" />

                <EditText
                    android:id="@+id/civil_id_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:layout_marginEnd="16dp"
                    android:spinnerMode="dropdown"
                    android:layout_toEndOf="@id/icon_7"
                    android:background="@null"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:hint="@string/civil_id"
                    android:enabled="false"
                    android:inputType="number"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/edit_text_background"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/icon_8"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/add_car_icon" />

                <EditText
                    android:id="@+id/phone_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:layout_marginEnd="16dp"
                    android:spinnerMode="dropdown"
                    android:layout_toEndOf="@id/icon_8"
                    android:background="@null"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:hint="@string/phone"
                    android:enabled="false"
                    android:inputType="phone"/>

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/dark_gray"
                android:text="@string/driving_license"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:layout_marginTop="8dp"
                android:background="@drawable/edit_text_background"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/driving_license_1"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/add_car_icon" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/tritary_gray"/>

                <ImageView
                    android:id="@+id/driving_license_2"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:src="@drawable/add_car_icon" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/dark_gray"
                android:text="@string/car_details"/>

            <include
                layout="@layout/car_item_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/icon_1"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/add_car_icon" />

                <EditText
                    android:id="@+id/agency_notes_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:layout_marginEnd="16dp"
                    android:layout_toEndOf="@id/icon_1"
                    android:background="@null"
                    android:gravity="center"
                    android:hint="Write your notes for the client here"
                    android:maxLines="4"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:spinnerMode="dropdown"
                    android:textColor="@color/colorAccent" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttons_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:weightSum="2"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/agree_client_button">

            <Button
                android:id="@+id/confirm_button"
                android:layout_width="0dp"
                android:layout_height="@dimen/edit_text_height"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:background="@drawable/cornered_primary_bg"
                android:text="@string/confirm"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/reject_button"
                android:layout_width="0dp"
                android:layout_height="@dimen/edit_text_height"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:background="@drawable/cornered_primary_bg"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/reject"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>

        <Button
            android:id="@+id/agree_client_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:background="@drawable/cornered_primary_bg"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/i_agree"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>